# esp32_snapclient

./: .cproject  .project  .~lock.partitions.csv#  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32.old  sdkconfig.defaults.old  sdkconfig.old
components/: ai-thinker-esp32-a1s
components/buffer/: .cproject  .project
components/crossover/: .cproject  .project  CMakeLists.txt  crossover.c
components/crossover/include/: crossover.h
components/device_data/: CMakeLists.txt  device_data.c
components/device_data/include/: device_data.h
components/snapcast/: .cproject  .project  CMakeLists.txt  snapcast.c
components/snapcast/include/: snapcast.h
components/snapcast_stream/: .cproject  .project  CMakeLists.txt  snapcast_stream.c  tcp_handler.c  timeprovider.c
components/snapcast_stream/include/: snapcast_stream.h  tcp_handler.h
components/sntp_client/: .cproject  .project  CMakeLists.txt  sntp_client.c
components/sntp_client/include/: sntp_client.h
components/webserver/: .cproject  .project  CMakeLists.txt  webserver.c
components/webserver/include/: amp_html.h  config_html.h  index_html.h  webserver.h  wifi_html.h
components/wifi_interface/: .cproject  .project  CMakeLists.txt  wifi_interface.c
components/wifi_interface/include/: wifi_interface.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
